--- a/KuranX.App/Core/ResourceXaml/homeDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/homeDesign.xaml
@@ -481,6 +481,32 @@
         </Style.Triggers>
     </Style>
 
+    <Style TargetType="Button" x:Key="hmwnd_appErrButton">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="#383C41" />
+        <Setter Property="Opacity" Value="0.60" />
+        <Setter Property="Height" Value="24" />
+        <Setter Property="Margin" Value="0 0 20 0" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Bottom" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <TextBlock VerticalAlignment="Center" Height="24" Width="24">
+                          <Icon:PackIconBoxIcons Kind="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" Width="24" Height="24" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    </TextBlock>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Opacity" Value="1" />
+                <Setter Property="Cursor" Value="Hand" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style TargetType="Button" x:Key="hmwnd_appFullButton">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Foreground" Value="#383C41" />
