--- a/KuranX.App/Core/Windows/homeScreen.xaml
+++ b/KuranX.App/Core/Windows/homeScreen.xaml
@@ -846,11 +846,62 @@
                 </Border>
             </Popup>
 
+
+            <Popup StaysOpen="False" x:Name="popup_ErrOpenPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="440" Height="540" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+
+                <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="420" Height="520">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50" />
+                            <RowDefinition Height="470" />
+                        </Grid.RowDefinitions>
+                        <Border  Grid.Row="0" Style="{DynamicResource pp_BorderHeader}">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="48" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="48" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Column="1" Text="Hata Bildirimi" Style="{DynamicResource pp_HeaderText}" />
+                                <Button Content="Hata Bildirimi" Tag="MoveiOS" Click="popuverMove_Click" Uid="popup_feedbackOpenPopup" Style="{DynamicResource pp_moveBaseIcon}" Background="Transparent" />
+                            </Grid>
+                        </Border>
+                        <Grid Grid.Row="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="50" />
+                            </Grid.RowDefinitions>
+                            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Grid.Row="0">
+
+                                <TextBlock Text="Hata Kodu" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
+                                <TextBox Style="{DynamicResource pp_DefaulTextBox}" Width="380" x:Name="errCode" IsReadOnly="True" />
+
+                                <TextBlock Text="Hatayı Yazın Lütfen" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,20,0,0" />
+                                <TextBox TextWrapping="Wrap" AcceptsReturn="True" TextAlignment="Justify" VerticalScrollBarVisibility="Visible" Height="250" Style="{DynamicResource pp_DefaulTextArea}" Width="380" x:Name="errDetail" />
+                            </StackPanel>
+                            <Grid Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+
+                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0">
+                                    <Button x:Name="feedbackPopupButton" Style="{DynamicResource pp_DefaultButtonSend}" Tag="SendiOS" Content="Gönder" HorizontalAlignment="Center" Click="appErrSend_Click" />
+                                    <Button x:Name="feedbackPopupClose"  Style="{DynamicResource pp_DefaultButtonClosed}" Tag="CloseBig" Content="Vazgeç" Uid="popup_ErrOpenPopup" HorizontalAlignment="Center" Click="popupClosed_Click" />
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                </Border>
+
+            </Popup>
+
             <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Right" Panel.ZIndex="7" Margin="0 10 0 0">
 
-                <Button Style="{DynamicResource hmwnd_appclosedButton}"  Content="MinusOutline" Click="appMin_Click" />
-                <Button Style="{DynamicResource hmwnd_appFullButton}"  Content="ExpandSolid" Click="appFull_Click" />
-                <Button Style="{DynamicResource hmwnd_appclosedButton}"  Content="CloseOutline" Click="appClosed_Click" />
+                <Button Style="{DynamicResource hmwnd_appErrButton}"  Content="RegularError" ToolTip="Hata Bildir" Click="appErr_Click"/>
+                <Button Style="{DynamicResource hmwnd_appclosedButton}"  Content="MinusOutline" Click="appMin_Click" ToolTip="Uygulamayı Küçüt"/>
+                <Button Style="{DynamicResource hmwnd_appFullButton}"  Content="ExpandSolid" Click="appFull_Click" ToolTip="Full Ekran Yap"/>
+                <Button Style="{DynamicResource hmwnd_appclosedButton}"  Content="CloseOutline" Click="appClosed_Click" ToolTip="Uygulamayı Kapat"/>
+
             </StackPanel>
 
             <Grid x:Name="loadinGifContent" Grid.Row="0" Background="#FAFAFA" Panel.ZIndex="5" Visibility="Collapsed">
